<resources>
    <string name="app_name">VideoPlay</string>
    <!-- mine-->
    <string name="my_collection">我的收藏</string>
    <string name="my_attention">我的关注</string>
    <string name="my_feedback">意见反馈</string>
    <string name="my_follow">关于我们</string>
    <string name="my_setting">设置</string>

    <string name="sure">确定</string>

    <!-- **************************************** -->
    <string name="empty_words">暂无数据</string>
    <string name="str_loading">正在加载数据</string>
</resources>
